k8s/apps/base/networkpolicy-allow-apis-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-apis-egress
  namespace: asrp
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - catalog-api
          - orders-api
  policyTypes:
    - Egress
  egress:
    # Keycloak (JWT verification via JWKS/discovery internos)
    - to:
        - podSelector:
            matchLabels:
              app: keycloak
      ports:
        - protocol: TCP
          port: 8080

    # catalog-db
    - to:
        - podSelector:
            matchLabels:
              app: catalog-db
      ports:
        - protocol: TCP
          port: 5432

    # orders-db
    - to:
        - podSelector:
            matchLabels:
              app: orders-db
      ports:
        - protocol: TCP
          port: 5432
