k8s/apps/base/networkpolicy-allow-apis-ingress-from-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-apis-ingress-from-gateway
  namespace: asrp
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - catalog-api
          - orders-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api-gateway
      ports:
        - protocol: TCP
          port: 8000
