k8s/apps/base/networkpolicy-allow-ingress-from-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-ingress-nginx
  namespace: asrp
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - frontend
          - api-gateway
          - keycloak
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/component: controller
              app.kubernetes.io/name: ingress-nginx
      ports:
        - protocol: TCP
          # frontend/keycloak
          port: 8080
        - protocol: TCP
          # api-gateway
          port: 4000
